// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Default Alert 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#3F88C5",
      "border": "1px solid #3F88C5",
      "borderRadius": "3px",
      "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)",
      "color": "#fff",
      "marginBottom": "15px",
      "padding": "15px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
  style={
    Object {
      "display": "block",
    }
  }
>
  Test alert
</EmotionCssPropInternal>
`;

exports[`Alert Dismissible Alert 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#9BC53D",
      "border": "1px solid #9BC53D",
      "borderRadius": "3px",
      "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)",
      "color": "#fff",
      "marginBottom": "15px",
      "padding": "15px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
  style={
    Object {
      "display": "block",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        ":hover": Object {
          "opacity": 1,
        },
        "cursor": "pointer",
        "fontFamily": "-webkit-pictograph",
        "fontSize": "28px",
        "fontWeight": "bold",
        "height": "28px",
        "lineHeight": "28px",
        "opacity": 0.7,
        "position": "absolute",
        "right": "7.5px",
        "textAlign": "left",
        "top": "15px",
        "transform": "rotate(45deg)",
        "userSelect": "none",
        "width": "28px",
      }
    }
    onClick={[Function]}
  >
    +
  </EmotionCssPropInternal>
  Test alert
</EmotionCssPropInternal>
`;

exports[`Alert Outline Alert 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#E76846",
      "border": "1px solid #D15130",
      "borderRadius": "3px",
      "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)",
      "color": "#fff",
      "marginBottom": "15px",
      "padding": "15px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
  style={
    Object {
      "display": "block",
    }
  }
>
  Test alert
</EmotionCssPropInternal>
`;
